--- a/public/admin.html
+++ b/public/admin.html
@@ -25,8 +25,7 @@
     color:var(--text);
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
     background: radial-gradient(circle at 30% -10%, var(--bg1), var(--bg2));
-    /* IMPORTANTE: permitir scroll en celu cuando la lista crece */
-    overflow:auto;
+    overflow:auto; /* permite scroll en celu si la lista crece */
   }
 
   /* Fondo animado */
@@ -38,8 +37,7 @@
   /* Logo pegado a la tarjeta */
   .logo-wrap{display:flex;justify-content:center}
   .logo{
-    width:240px;
-    display:block;
+    width:240px;display:block;
     filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));
     margin:14px auto -18px; /* pega la tarjeta al logo */
   }
@@ -50,8 +48,7 @@
     background:
       linear-gradient(var(--card),var(--card)) padding-box,
       linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
-    border:1px solid transparent;
-    border-radius:20px;
+    border:1px solid transparent;border-radius:20px;
     box-shadow:0 12px 40px rgba(0,0,0,.45);
   }
   .card-inner{padding:18px 16px}
@@ -69,75 +66,61 @@
   }
   input::placeholder{color:#9a8ccc}
 
-  /* ACCIONES: una sola línea SIEMPRE (scroll horizontal en celu) */
-  .actions{
-    display:flex;
-    flex-wrap:nowrap;        /* no bajar de línea */
-    gap:8px;
-    justify-content:flex-start;
-    overflow-x:auto;         /* permite deslizar en celu */
-    -webkit-overflow-scrolling:touch;
-    scroll-snap-type:x mandatory;
-    padding-bottom:4px;
-  }
-  .actions::-webkit-scrollbar{height:6px}
-  .actions::-webkit-scrollbar-thumb{background:rgba(255,255,255,.12);border-radius:999px}
-
-  /* Botones con borde neón girando constantemente (efecto circular real) */
+  /* Botones base con borde neón girando */
   .btn{
-    position:relative;
-    border:none;
-    border-radius:12px;
-    padding:10px 12px;
-    color:#fff;
-    cursor:pointer;
-    outline:none;
+    position:relative;border:none;border-radius:12px;
+    padding:10px 12px;color:#fff;cursor:pointer;outline:none;
     background:var(--btn-bg);
     box-shadow:0 6px 22px rgba(40,0,120,.28);
-    white-space:nowrap;
-    font-weight:600;
-    letter-spacing:.2px;
-    scroll-snap-align:center;
-    min-width:150px;          /* tamaño uniforme para la fila */
+    white-space:nowrap;font-weight:600;letter-spacing:.2px;
     text-align:center;
   }
   .btn:hover{filter:brightness(1.1)}
-
-  /* Anillo neón giratorio */
   .btn::before{
-    content:"";
-    position:absolute;
-    inset:-2px;
-    border-radius:14px;
+    content:"";position:absolute;inset:-2px;border-radius:14px;z-index:-1;
     background:conic-gradient(var(--neonA),var(--neonB),var(--neonA),var(--neonA));
     animation:spin 2.8s linear infinite;
-    z-index:0;
-
-    /* máscara para que se vea solo el borde (anillo) */
-    -webkit-mask:
-      linear-gradient(#000 0 0) content-box,
-      linear-gradient(#000 0 0);
-    -webkit-mask-composite:xor;
-            mask-composite:exclude;
-    padding:2px; /* grosor del anillo */
+    -webkit-mask:linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
+    -webkit-mask-composite:xor; mask-composite:exclude;
+    padding:2px; filter:saturate(120%) blur(.3px);
   }
-  .btn > *{position:relative;z-index:1}
-
+  .btn::after{
+    content:"";position:absolute;inset:-2px;border-radius:14px;z-index:-1;
+    background:conic-gradient(from 0deg, transparent 0%, transparent 88%, rgba(255,255,255,.9) 92%, rgba(233,230,255,.95) 96%, transparent 100%);
+    animation:spin 2.1s linear infinite;
+    -webkit-mask:linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
+    -webkit-mask-composite:xor; mask-composite:exclude;
+    padding:2px; filter:blur(.6px);
+  }
   @keyframes spin{to{transform:rotate(360deg)}}
 
-  /* Ítems de la lista */
+  /* Disposición de acciones: fila superior + fila inferior */
+  .actions-top{
+    display:flex;gap:8px;margin:10px 0 6px;
+    justify-content:center;flex-wrap:nowrap;overflow-x:auto;
+    -webkit-overflow-scrolling:touch;scroll-snap-type:x mandatory;
+  }
+  .actions-top .btn{min-width:160px;scroll-snap-align:center}
+  .actions-bottom{
+    display:flex;justify-content:center;margin:6px 0 4px;
+  }
+  .actions-bottom .btn{min-width:200px}
+
+  /* Lista y mensajes */
   .item{display:flex;gap:8px;margin:6px 0}
   .item .btn{min-width:auto;padding:10px 12px}
-
-  /* Mensajes */
-  #msg.ok{color:#90f0b0}
-  #msg.err{color:#fca5a5}
+  #msg.ok{color:#90f0b0} #msg.err{color:#fca5a5}
 
   /* Responsive */
   @media (max-width:420px){
     .logo{width:220px;margin:12px auto -16px}
-    .btn{min-width:140px;font-size:14px;padding:10px 10px}
+    .btn{font-size:14px;padding:10px 10px}
+    .actions-top .btn{min-width:150px}
+    .actions-bottom .btn{min-width:190px}
     .card-inner{padding:16px 12px}
+  }
+  @media (prefers-reduced-motion: reduce){
+    .btn::before,.btn::after{animation:none}
   }
 </style>
 </head>
@@ -160,12 +143,16 @@
         <button class="btn" id="btnSaveToken">Guardar token</button>
       </div>
 
-      <!-- UNA sola línea con scroll horizontal -->
-      <div class="actions">
+      <!-- Fila superior: Actualizar | Borrar | Resetear -->
+      <div class="actions-top">
         <button class="btn" id="btnUpdate">Actualizar lista</button>
-        <button class="btn" id="btnAdd">Agregar</button>
         <button class="btn" id="btnReset">Borrar lista</button>
-        <button class="btn" id="btnRot">Reset rotación</button>
+        <button class="btn" id="btnRot">Resetear rotación</button>
+      </div>
+
+      <!-- Fila inferior: AGREGAR CAJERA -->
+      <div class="actions-bottom">
+        <button class="btn" id="btnAdd">AGREGAR CAJERA</button>
       </div>
 
       <div id="list"></div>
@@ -186,13 +173,10 @@ for(let i=0;i<90;i++)P.push({
   r:Math.random()*2+.7
 });
 (function anim(){
-  // gradiente de fondo (radial)
   const grad=x.createRadialGradient(c.width*0.3, c.height*0.1, 0, c.width*0.3, c.height*0.1, Math.max(c.width,c.height));
   grad.addColorStop(0, getComputedStyle(document.documentElement).getPropertyValue('--bg1').trim());
   grad.addColorStop(1, getComputedStyle(document.documentElement).getPropertyValue('--bg2').trim());
   x.fillStyle=grad;x.fillRect(0,0,c.width,c.height);
-
-  // partículas
   x.fillStyle=getComputedStyle(document.documentElement).getPropertyValue('--particle').trim();
   for(const p of P){
     p.x+=p.vx;p.y+=p.vy;
@@ -213,12 +197,11 @@ function row(v=""){
   const i=document.createElement("input");i.type="text";i.placeholder="https://wa.me/...";i.value=v;
   const b=document.createElement("button");b.className="btn";b.textContent="Borrar";b.onclick=()=>d.remove();
   d.append(i,b);list.append(d);
-
   // Scroll suave al nuevo campo (para celu)
   setTimeout(()=>{ i.scrollIntoView({behavior:"smooth", block:"end"}); i.focus(); }, 50);
 }
 
-/* Obtener valores */
+/* Obtener valores / mensajes */
 function values(){return[...list.querySelectorAll("input")].map(i=>i.value.trim()).filter(Boolean)}
 function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err"}
 
@@ -241,12 +224,10 @@ async function loadList(t){
     (j.links||[]).forEach(v=>row(v));
     if((j.links||[]).length===0)row("");
     show("Lista cargada");
-  }catch(e){
-    show("Error al cargar",0);
-  }
+  }catch(e){ show("Error al cargar",0); }
 }
 
-/* Agregar campo */
+/* Agregar cajera */
 $("#btnAdd").onclick=()=>row("");
 
 /* Actualizar lista (POST y luego refresco) */
@@ -258,9 +239,7 @@ $("#btnUpdate").onclick=async()=>{
   try{
     show("Guardando...");
     const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify(vals)
+      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)
     });
     const j=await r.json();
     if(j.ok){ show(`Guardado (${j.saved})`); await loadList(t); }
