--- a/public/admin.html
+++ b/public/admin.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>PANEL ADMIN</title>
 <style>
-  /* Evita desbordes inesperados en layouts responsivos */
   *{ box-sizing:border-box; }
 
   :root{
@@ -14,15 +13,13 @@
     --text:#ffffff; --muted:#c9c0f2; --btn-bg:#1e1935;
     --neonA:#b985ff; --neonB:#efe6ff; --pulse:#7f5cff;
 
-    /* Ajustes rápidos */
-    --listColW:108px;   /* col Nombre y Borrar (desktop) */
-    --saveBtnW:160px;   /* ancho de Guardar / Guardar token (mini tarjeta) */
+    --listColW:108px;
+    --saveBtnW:160px;
 
-    /* Grid de Configuración (mini tarjeta) */
-    --cfgLabelW:110px;  /* "Rotar cada" */
-    --cfgNumberW:60px;  /* [número] */
-    --cfgSuffixW:56px;  /* "clicks" */
-    --cfgGap:8px;       /* separación entre columnas */
+    --cfgLabelW:110px;
+    --cfgNumberW:60px;
+    --cfgSuffixW:56px;
+    --cfgGap:8px;
   }
 
   html,body{
@@ -55,7 +52,6 @@
   }
   input::placeholder{color:#9a8ccc}
 
-  /* ===== Botones ===== */
   .btn{
     position:relative;border:none;border-radius:12px;padding:10px 12px;
     color:#fff;cursor:pointer;outline:none;background:var(--btn-bg);
@@ -76,7 +72,6 @@
   }
   .btn--sm{ height:34px; padding:8px 10px; font-size:12px; }
 
-  /* ===== Top 3 botones ===== */
   .actions-top{
     display:grid;
     grid-template-columns:1fr 1fr 1fr;
@@ -85,7 +80,6 @@
   }
   #btnRot{ font-size:11.4px; }
 
-  /* ===== Botón principal ===== */
   .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
   .btn--main{
     position:relative;
@@ -111,7 +105,6 @@
     50%    { transform:scale(1.06); opacity:1;   }
   }
 
-  /* ===== Lista: Nombre | wa link | Borrar ===== */
   #list{margin-top:24px;}
   .item{
     display:grid;
@@ -137,7 +130,6 @@
 
   .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
 
-  /* ===== Mini tarjeta: Configuración ===== */
   .cfg-grid{
     display:grid;
     grid-template-columns:
@@ -173,7 +165,6 @@
     justify-content:center;
   }
 
-  /* ===== Botón estadísticas ===== */
   .stats-card{
     margin:18px auto;
     padding:14px;
@@ -190,7 +181,6 @@
     background:conic-gradient(from 0deg,#ffffff 0deg 110deg,#b985ff 110deg 360deg);
   }
 
-  /* ===== Responsive ===== */
   @media(max-width:420px){
     .logo{width:216px;margin:8px auto -38px}
     .card-inner{padding:14px 10px}
@@ -207,14 +197,13 @@
     .item .btn{ font-size:11.5px; padding:0 6px; }
   }
 
-  /* ===== Ajuste de CONFIGURACIÓN en escritorio (alineado) ===== */
   @media (min-width: 768px){
   .cfg-grid{
     grid-template-columns:
       var(--cfgLabelW)
       var(--cfgNumberW)
       var(--cfgSuffixW)
-      minmax(0, 0.8fr)  /* 🔹 le da un ancho controlado al token */
+      minmax(0, 0.8fr)
       var(--saveBtnW);
     align-items:center;
     gap:var(--cfgGap);
@@ -239,7 +228,6 @@
     <img class="logo" src="/insomnia-logo.png" alt="Insomnia Logo">
   </div>
 
-  <!-- Tarjeta principal -->
   <div class="card">
     <div class="card-inner">
       <h1>PANEL ADMIN</h1>
@@ -256,7 +244,6 @@
 
       <div id="list"></div>
 
-      <!-- 🔒 Oculto al inicio: aparece al tocar "Ver lista" -->
       <div class="save-wrap" id="saveWrap" style="display:none">
         <button class="btn btn--thin" id="btnSaveFinal">Guardar</button>
       </div>
@@ -265,13 +252,11 @@
     </div>
   </div>
 
-  <!-- Botón Estadísticas -->
   <div class="stats-card" id="btnStats">
     <div class="stats-icon"></div>
     <span>Estadísticas</span>
   </div>
 
-  <!-- Mini tarjeta inferior -->
   <div class="card-mini">
     <div class="mini-inner">
       <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
@@ -292,7 +277,6 @@
 </div>
 
 <script>
-// Fondo partículas
 const c=document.getElementById("bg"),x=c.getContext("2d");
 let P=[];
 function rs(){c.width=innerWidth;c.height=innerHeight}
@@ -344,8 +328,7 @@ $("#btnView").onclick=async()=>{
     list.innerHTML="";(j.links||[]).forEach(o=>row(o));
     if((j.links||[]).length===0)row();
     show("Lista cargada");
-    /* 👇 Mostrar botón Guardar después de ver la lista */
-    saveWrap.style.display='flex';
+    saveWrap.style.display='flex'; // 👈 aparece el botón Guardar
   }catch(e){show("Error al cargar",0);}
 };
 
@@ -366,7 +349,11 @@ $("#btnRot").onclick=async()=>{
   }catch(e){show("Error",0);}
 };
 
-$("#btnAdd").onclick=()=>row();
+// 👇 ahora también muestra el botón Guardar al agregar cajera
+$("#btnAdd").onclick = () => {
+  row();
+  saveWrap.style.display='flex';
+};
 
 $("#btnSaveFinal").onclick=async()=>{
   const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
